--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/js": "^9.27.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
@@ -45,6 +46,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "multer": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
