--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/js": "^9.27.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "eslint": "^9.27.0",
@@ -43,6 +44,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
