--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose-delete": "^1.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "eslint": "^9.27.0",
@@ -49,7 +50,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
+    "mongoose-delete": "^1.0.2",
     "multer": "^2.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qrcode": "^1.5.4"
   }
 }
