--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongoose-delete": "^1.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
+    "@types/qrcode": "^1.5.5",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
@@ -46,13 +47,8 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
     "mongoose": "^8.15.1",
-    "mongoose-delete": "^1.0.2",
-    "multer": "^2.0.0",
-    "path": "^0.12.7",
-    "qrcode": "^1.5.4"
+    "path": "^0.12.7"
   }
 }
