--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
